fleshed out function

--- a/index.html
+++ b/index.html
@@ -10,6 +10,5 @@
 		<h1>Javascript in HTML</h1>
 	</body>
 	<!--  NOTE: JS goes at the end to let the whole page load first -->
-	<script type="text/Javascript" src="script.js"></script>
-	<script type="text/Javascript" src="scratchpad.js"></script>
-	</html>
+	<script type="text/javascript" src="script.js"></script>
+</html>
