broke into two functions + ternary

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	</head>
 	<body>
 		<h1>Javascript in HTML</h1>
-			<!-- <script type="text/javascript" src="script.js"></script> -->
-			<script type="text/javascript" src="./lessons/loops.js"></script>
+			<script type="text/javascript" src="script.js"></script>
+			<!-- <script type="text/javascript" src="./lessons/loops.js"></script> -->
 
 	</body>
 	<!--  NOTE: JS goes at the end to let the whole page load first -->
